--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@goodsamsoftware/freshbooks-mcp",
-  "version": "1.0.2",
+  "version": "1.0.0",
   "description": "FreshBooks MCP server providing 1:1 parity with the FreshBooks Node.js SDK",
   "type": "module",
   "main": "dist/server.js",
@@ -38,7 +38,7 @@
     }
   },
   "bin": {
-    "freshbooks-mcp": "dist/server.js"
+    "freshbooks-mcp": "./dist/server.js"
   },
   "files": [
     "dist",
