Modify permissions for publish job in workflow
Updated permissions for NPM publishing job.

--- a/.github/workflows/publish-to-npm.yml
+++ b/.github/workflows/publish-to-npm.yml
@@ -15,8 +15,11 @@ jobs:
   publish:
     name: Publish to NPM
     runs-on: ubuntu-latest
-    permissions:
-      contents: read
+    permissions:  
+      checks: write
+      contents: write
+      pull-requests: write
+      statuses: write
       id-token: write  # Required for npm Trusted Publishing
     steps:
       - name: Checkout
