--- a/.github/workflows/publish-to-npm.yml
+++ b/.github/workflows/publish-to-npm.yml
@@ -9,18 +9,16 @@ concurrency:
   cancel-in-progress: true
 
 env:
-  NODE_VERSION: '20.x'
+  NODE_VERSION: '24 '
 
+permissions:  
+  id-token: read  
+  contents: write
+  
 jobs:
   publish:
     name: Publish to NPM
     runs-on: ubuntu-latest
-    permissions:  
-      checks: write
-      contents: write
-      pull-requests: write
-      statuses: write
-      id-token: write  # Required for npm Trusted Publishing
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -40,7 +38,7 @@ jobs:
         run: npm run build
 
       - name: Publish to npm (Trusted Publishing)
-        run: npm publish --provenance --access public
+        run: npm publish
         env: 
           NODE_AUTH_TOKEN: ''
 
