--- a/.github/workflows/publish-to-npm.yml
+++ b/.github/workflows/publish-to-npm.yml
@@ -12,8 +12,8 @@ env:
   NODE_VERSION: '24 '
 
 permissions:  
-  id-token: read  
-  contents: write
+  id-token: write 
+  contents: read 
   
 jobs:
   publish:
